# ffsubsync-batch

./: .gitignore  Dockerfile  README.md  ffsubsync-job.yaml  pyproject.toml
.github/workflows/: ci.yml
ffsubsync_batch/: __main__.py  config.py  logging.py  main.py  models.py  sonarr.py  subtitles.py  sync.py  toolcheck.py
tests/: conftest.py  test_config.py  test_main.py  test_sonarr.py  test_subtitles.py  test_sync.py
