[tool.poetry]
name = "ffsubsync-batch"
version = "1.0.0"
description = "Batch-sync subtitles using Sonarr API and ffsubsync"
readme = "README.md"
packages = [{ include = "ffsubsync_batch" }]

[tool.poetry.scripts]
ffsubsync-batch = "ffsubsync_batch.main:main"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "2.12.5"
pydantic-settings = "2.13.1"
requests = "2.32.5"
ffsubsync = "0.4.31"

[tool.poetry.group.dev.dependencies]
ruff = "0.15.5"
mypy = "1.19.1"
pytest = "9.0.2"
responses = "0.26.0"
types-requests = "2.32.4.20260107"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Ruff ──────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["sync_subtitles.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

# ── Mypy ──────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = ["ffsubsync.*"]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
